objects/tffa__ProductFeature__c.object
<CustomObject>
    <description>Product can have many business features, which can be configured for the consumption of the use cases.</description>
    <fields>
        <fullName>ShowOnCard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if the feature is to be displayed on card and not in the details section.</description>
        <label>Show on Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state.</description>
        <formula>tffa__Disabled__c = False</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier for the product feature.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the feature.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the feature is available.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FieldType__c</fullName>
        <description>Type of a field that captures the feature.</description>
        <label>Field type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FieldType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Group__c</fullName>
        <description>Groups related features together. Can be used for building dynamic selection lists in UI. e.g. LadderPlan</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the product feature is not meant to be shown in the product details screen. Such features are used for internal purposes e.g. business validation logic, etc.</description>
        <inlineHelpText>True if the product feature is not meant to be shown in the product details screen. Such features are used for internal purposes e.g. business validation logic, etc.</inlineHelpText>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsComparable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the feature is comparable. Used when comparing similar features of multiple products.</description>
        <label>Is Comparable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>Display name of the feature, expressed as an RB key.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LovName__c</fullName>
        <description>The name of the picklist for a select field capturing the feature.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lov name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <description>Reference to parent product</description>
        <label>Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipName>Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the feature in a selection list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ValueName__c</fullName>
        <description>The display text for the feature value. Useful when feature value is cryptic (composed of codes).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>The value of the feature. This can also be used as the default value.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Financial Product Feature</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial  Product Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>